Bug 245485 - [IFC][Integration] Tighten up float support checking with mismatching inline direction
Summary: [IFC][Integration] Tighten up float support checking with mismatching inline ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-09-21 09:39 PDT by zalan
Modified: 2022-09-21 21:36 PDT (History)
5 users (show)

See Also:


Attachments
Patch (3.82 KB, patch)
2022-09-21 09:52 PDT, zalan
no flags Details | Formatted Diff | Diff
Patch (5.72 KB, patch)
2022-09-21 14:05 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2022-09-21 09:39:00 PDT
ssia
Comment 1 zalan 2022-09-21 09:52:00 PDT
Created attachment 462508 [details]
Patch
Comment 2 zalan 2022-09-21 14:05:22 PDT
Created attachment 462518 [details]
Patch
Comment 3 EWS 2022-09-21 21:35:26 PDT
Committed 254749@main (f1bbab6ed293): <https://commits.webkit.org/254749@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 462518 [details].
Comment 4 Radar WebKit Bug Importer 2022-09-21 21:36:19 PDT
<rdar://problem/100255623>