[IFC][Integration] Tighten up float support checking with mismatching inline direction https://bugs.webkit.org/show_bug.cgi?id=245485

Reviewed by Antti Koivisto.

Enable the mismatching inline direction check (and extend it to rtl) for any content. It means that we fallback to legacy line layout when an intrusive float is coming from either a mismatching or rtl parent regardless of whether the current IFC has floats.

<div style="direction: rtl">
  <div style="float: left"></div>
  modern line layout
</div>

is still IFC while

<div style="direction: rtl">
  <div style="float: left"></div>
  <div style="direction: ltr">legacy line layout</div>
</div>

is legacy.

* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForChild):
(WebCore::LayoutIntegration::canUseForLineLayoutWithReason):

Canonical link: https://commits.webkit.org/254749@main