Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp
@@ -349,7 +349,7 @@ static OptionSet<AvoidanceReason> canUseForRenderInlineChild(const RenderInline&
     return reasons;
 }
 
-static OptionSet<AvoidanceReason> canUseForChild(const RenderBlockFlow& flow, const RenderObject& child, IncludeReasons includeReasons)
+static OptionSet<AvoidanceReason> canUseForChild(const RenderObject& child, IncludeReasons includeReasons)
 {
     OptionSet<AvoidanceReason> reasons;
 
@@ -384,10 +384,6 @@ static OptionSet<AvoidanceReason> canUseForChild(const RenderBlockFlow& flow, co
         if (renderer.isFloating() && !renderer.parent()->style().isHorizontalWritingMode())
             return false;
 #endif
-        auto intrusiveFloatsWithMismatchingInlineDirection = flow.containsFloats() && flow.containingBlock() && flow.containingBlock()->style().isLeftToRightDirection() != flow.style().isLeftToRightDirection();
-        if (renderer.isFloating() && intrusiveFloatsWithMismatchingInlineDirection)
-            return false;
-
         if (renderer.style().shapeOutside())
             return false;
         if (renderer.isOutOfFlowPositioned()) {
@@ -502,7 +498,7 @@ OptionSet<AvoidanceReason> canUseForLineLayoutWithReason(const RenderBlockFlow& 
 
     for (auto walker = InlineWalker(flow); !walker.atEnd(); walker.advance()) {
         auto& child = *walker.current();
-        if (auto childReasons = canUseForChild(flow, child, includeReasons))
+        if (auto childReasons = canUseForChild(child, includeReasons))
             ADD_REASONS_AND_RETURN_IF_NEEDED(childReasons, reasons, includeReasons);
     }
     auto styleReasons = canUseForStyle(flow, includeReasons);
@@ -510,6 +506,10 @@ OptionSet<AvoidanceReason> canUseForLineLayoutWithReason(const RenderBlockFlow& 
         ADD_REASONS_AND_RETURN_IF_NEEDED(styleReasons, reasons, includeReasons);
 
     if (flow.containsFloats()) {
+        auto intrusiveFloatsWithMismatchingInlineDirection = flow.containingBlock() && (flow.containingBlock()->style().isLeftToRightDirection() != flow.style().isLeftToRightDirection() || !flow.style().isLeftToRightDirection());
+        if (intrusiveFloatsWithMismatchingInlineDirection)
+            SET_REASON_AND_RETURN_IF_NEEDED(FlowHasUnsupportedFloat, reasons, includeReasons);
+
         for (auto& floatingObject : *flow.floatingObjectSet()) {
             ASSERT(floatingObject);
             // if a float has a shape, we cannot tell if content will need to be shifted until after we lay it out,
